--- a/eCommerceApp.Server.UI/Pages/Users/Register.razor
+++ b/eCommerceApp.Server.UI/Pages/Users/Register.razor
@@ -11,7 +11,7 @@
     </div>
 }
 
-<div class="card-body">
+<div>
     <EditForm Model="RegistrationModel" OnValidSubmit="HandleRegistration">
         <DataAnnotationsValidator />
         <ValidationSummary />
